--- a/global.css
+++ b/global.css
@@ -6,10 +6,10 @@
     --darkfont: rgb(10, 10, 10) !important;
     --lightbg: rgb(255, 255, 255) !important;
     --borderlight:rgb(100, 100, 100) !important; */
-
+/* 
     --font: ;
     --bg: ;
-    --bordercolor: ;
+    --bordercolor: ; */
 }
 
 
